--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "@nuxt/eslint": "^0.4.0",
+    "@nuxt/image": "^1.7.0",
     "@nuxt/ui": "^2.18.3",
     "@pinia/nuxt": "^0.5.2"
   }
