--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@nuxt/eslint": "^0.4.0",
     "@nuxt/image": "^1.7.0",
     "@nuxt/ui": "^2.18.3",
+    "@nuxtjs/google-fonts": "^3.2.0",
     "@pinia/nuxt": "^0.5.2"
   }
 }
