--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "nuxt": "^3.12.4",
+    "tailwindcss": "^3.4.7",
     "vue": "latest"
   },
   "devDependencies": {
