--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nuxt-app",
+  "name": "portifolio-darlan",
   "private": true,
   "type": "module",
   "scripts": {
@@ -10,15 +10,19 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@types/animejs": "^3.1.12",
+    "animejs": "^3.2.2",
     "nuxt": "^3.12.4",
     "tailwindcss": "^3.4.7",
     "vue": "latest"
   },
   "devDependencies": {
+    "@iconify-json/grommet-icons": "^1.1.12",
     "@nuxt/eslint": "^0.4.0",
     "@nuxt/image": "^1.7.0",
     "@nuxt/ui": "^2.18.3",
     "@nuxtjs/google-fonts": "^3.2.0",
-    "@pinia/nuxt": "^0.5.2"
+    "@pinia/nuxt": "^0.5.2",
+    "@typescript-eslint/parser": "^8.0.0"
   }
 }
