--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@types/animejs": "^3.1.12",
+    "@vercel/analytics": "^1.3.1",
     "animejs": "^3.2.2",
     "nuxt": "^3.12.4",
     "tailwindcss": "^3.4.7",
